@@ -2,6 +2,7 @@
 
 	* added check of restricted groups (grouptype = 4) in listgroups application
 	* added getGrouptype() to the groupProfile model
+	* added hook connector for mm_forum to change the link to the user profile, require mm_forum 1.7
 
 2008-10-16 Frank Naegler  <typo3@naegler.net>
 
